api/swim_form/src/tests/derive/tag/fields.stderr
error: Only enumerations with no fields can be tags.
  --> $DIR/src/tests/derive/tag/fields.rs:18:14
   |
18 |     #[derive(Tag)]
   |              ^^^
